    is fixed
  * [x86] KASLR, power: Remove x86 hibernation restrictions
  * fanotify: Enable FANOTIFY_ACCESS_PERMISSIONS (Closes: #690737)
    - Warn and taint kernel if this feature is actually used
  * Define Auto-Built-Package field when running dpkg-gencontrol, as dpkg-source
    doesn't like to see it in debian/control

  [ Bastian Blank ]
  * Mark debug symbols packages to move them into the debug archive.
  * Build debug symbols for all images.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Jun 2016 20:43:50 +0100

linux (4.7~rc4-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * [armel] Disable module signing for all flavours (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 21 Jun 2016 00:41:23 +0100

linux (4.7~rc3-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * bug script: Put binary package name and version in the info file so
    linux-signed can easily replace them
  * Move merge_packages function from debian/bin/gencontrol.py to
    gencontrol module
  * udeb: Drop packages for modules that will later be signed
  * linux-image: Add '-unsigned' suffix to packages with modules that will
    later be signed
    - Add Conflicts and Replaces relations to signed packages (Closes: #827618)
  * [rt] Disable until it is updated for 4.7 or later
  * cpupower: Bump soname version and rename library package accordingly
  * debian/rules.d/Makefile: Override architecture detection when building
    userland headers
  * linux-cpupower: Define PACKAGE_BUGREPORT to refer to reportbug, not upstream
  * debian/README.source: Document the supported build profiles
  * debian/control: Fix build-dependencies for cross-building
    - Add workaround for libdpkg-perl bugs #827628, #827633
  * Add support for the nopython build profile, disabling the linux-perf package
  * Fix build rules for userland tools to support cross-building

  [ Martin Michlmayr ]