@@ -17,6 +17,8 @@ linux (4.7~rc7-1~exp1) UNRELEASED; urgency=medium
     - Warn and taint kernel if this feature is actually used
   * Define Auto-Built-Package field when running dpkg-gencontrol, as dpkg-source
     doesn't like to see it in debian/control
+  * debian/lib/python/debian_linux/debian.py: Handle packages with only short
+    descriptions
 
   [ Bastian Blank ]
   * Mark debug symbols packages to move them into the debug archive.
